--- a/index.html
+++ b/index.html
@@ -36,6 +36,32 @@
 
           <img src="img/me.jpg" alt="">
       </header>
+
+      <section class="experience section">
+        <div class="flex-wrapper">
+        <div>
+        <h2>My experiences...</h2>
+        <p>I've been working with HTML/CSS for over a decade. I have experience working with HTML &amp; CSS frameworks such as Bootstrap and Materialize CSS, content management systems such as WordPress, and JavaScript libraries/frameworks like React and Angular 2+.</p>
+        </div>
+
+        <aside>
+          <h3>My Skills</h3>
+          <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>React</li>
+            <li>Angular</li>
+          </ul>
+        </aside>
+        </div>
+      </section>
+
+      <section class="history">
+        <h2>Work History</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati velit inventore aliquid, provident repellat quos ab voluptas voluptatum omnis dolorum assumenda maiores magni eaque! Illum, maxime! Soluta aliquid veniam odit velit, commodi dolores assumenda id natus architecto rerum quibusdam eligendi.</p>
+      </section>
+
+      <footer>&copy; Tyler Turnipseed - 2019</footer>
     </main>
   </div>
 </body>
