added contact section to sidebar, added social section to sidebar

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
     <![endif]-->
 
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="css/index.css" />
   </head>
 
@@ -23,6 +29,37 @@
           <a class="nav-item" href="#">Portfolio</a>
           <a class="nav-item" href="#">Contact</a>
         </nav>
+
+        <section class="contact">
+          <h4>Get in touch!</h4>
+          <div class="contact-item">
+            <a class="contact-link" href="mailto:tyler@techturnip.us">
+              <i class="fa fa-envelope fa-2x" aria-hidden="true"></i>
+              tyler@techturnip.us
+            </a>
+          </div>
+          <div class="contact-item">
+            <a class="contact-link" href="tel:1-270-777-5591">
+              <i class="fa fa-phone fa-2x" aria-hidden="true"></i>
+              270-777-5591
+            </a>
+          </div>
+        </section>
+
+        <section class="social">
+          <h4>Social</h4>
+          <div class="social-icons">
+            <a href="#" class="social-link">
+              <i class="fab fa-github fa-2x" aria-hidden="true"></i>
+            </a>
+            <a href="#" class="social-link">
+              <i class="fab fa-twitter fa-2x" aria-hidden="true"></i>
+            </a>
+            <a href="#" class="social-link">
+              <i class="fab fa-linkedin fa-2x" aria-hidden="true"></i>
+            </a>
+          </div>
+        </section>
       </aside>
 
       <!-- main-content -->
@@ -38,7 +75,7 @@
 
         <section class="experience section">
           <div class="experience-content">
-            <h2>My experiences...</h2>
+            <h2>About Me</h2>
             <p>
               I've been working with HTML/CSS for over a decade. I have
               experience working with HTML &amp; CSS frameworks such as
