Added styling to list in sidebar of experience/about section, added styling and content for work history section

--- a/index.html
+++ b/index.html
@@ -98,13 +98,31 @@
 
         <section class="history">
           <h2>Work History</h2>
-          <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati
-            velit inventore aliquid, provident repellat quos ab voluptas
-            voluptatum omnis dolorum assumenda maiores magni eaque! Illum,
-            maxime! Soluta aliquid veniam odit velit, commodi dolores assumenda
-            id natus architecto rerum quibusdam eligendi.
-          </p>
+          <div class="history-item">
+            <h4>Field Technician - Terracon - July 2017 - Current</h4>
+            <p>
+              Ability to work independently and as a part of a team to
+              accomplish tasks. Acute attention to detail to perform inspection
+              services. Exceptional time management and effective communication
+              with clients. Attained two raises in under 1 year through hard
+              work and determination. Ability to work 20+ hour shifts and weekly
+              hours in excess of 80 hours. Ability to learn on the fly with
+              immediate application of learned skills in a professional
+              environment.
+            </p>
+          </div>
+
+          <div class="history-item">
+            <h4>
+              Produce Associate/Manager - Kroger - October 2013 - July 2017
+            </h4>
+            <p>
+              Managed a team of approximately 8 – 10 associates, task
+              delegation, training, scheduling and efficient salesfloor
+              operation. Maintain backroom organization and stock levels.
+              Achieved management position in approximately 1½ years.
+            </p>
+          </div>
         </section>
 
         <footer class="copyright">&copy; Tyler Turnipseed - 2019</footer>
