--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
           <img src="img/me.jpg" alt="" />
         </header>
 
-        <section class="experience section">
-          <div class="experience-content">
+        <section class="about section">
+          <div class="about-content">
             <h2>About Me</h2>
             <p>
               I've been working with HTML/CSS for over a decade. I have
@@ -85,7 +85,7 @@
             </p>
           </div>
 
-          <aside class="experience-sidebar">
+          <aside class="about-sidebar">
             <h3>My Skills</h3>
             <ul>
               <li>HTML</li>
