Added skills to skill sidebar in the about section

--- a/index.html
+++ b/index.html
@@ -49,13 +49,16 @@
         <section class="social">
           <h4>Social</h4>
           <div class="social-icons">
-            <a href="#" class="social-link">
+            <a href="https://github.com/techturnip" class="social-link">
               <i class="fab fa-github fa-2x" aria-hidden="true"></i>
             </a>
-            <a href="#" class="social-link">
+            <a href="https://twitter.com/tylertechseed" class="social-link">
               <i class="fab fa-twitter fa-2x" aria-hidden="true"></i>
             </a>
-            <a href="#" class="social-link">
+            <a
+              href="https://www.linkedin.com/in/tyler-turnipseed-79802a167/"
+              class="social-link"
+            >
               <i class="fab fa-linkedin fa-2x" aria-hidden="true"></i>
             </a>
           </div>
@@ -88,8 +91,11 @@
           <aside class="about-sidebar">
             <h3>My Skills</h3>
             <ul>
-              <li>HTML</li>
-              <li>CSS</li>
+              <li>HTML &amp; CSS</li>
+              <li>WordPress</li>
+              <li>Bootstrap</li>
+              <li>Materialize CSS</li>
+              <li>Less &amp; Sass</li>
               <li>React</li>
               <li>Angular</li>
             </ul>
