Added media queries to handle responsive styling

--- a/index.html
+++ b/index.html
@@ -138,31 +138,35 @@
           </div>
 
           <aside class="about-sidebar">
-            <h3>My Skills</h3>
-            <ul>
-              <li>HTML &amp; CSS</li>
-              <li>WordPress</li>
-              <li>Bootstrap</li>
-              <li>Materialize CSS</li>
-              <li>Less &amp; Sass</li>
-              <li>React</li>
-              <li>Angular</li>
-            </ul>
+            <div class="skills">
+              <h3>My Skills</h3>
+              <ul>
+                <li>HTML &amp; CSS</li>
+                <li>WordPress</li>
+                <li>Bootstrap</li>
+                <li>Materialize CSS</li>
+                <li>Less &amp; Sass</li>
+                <li>React</li>
+                <li>Angular</li>
+              </ul>
+            </div>
 
-            <h3>Soft Skills</h3>
-            <ul>
-              <li>Empathy</li>
-              <li>Personability</li>
-              <li>Approachability</li>
-              <li>Communication</li>
-              <li>Adaptability</li>
-              <li>Positive Attitude</li>
-              <li>Teamwork</li>
-              <li>Time Management</li>
-              <li>Leadership</li>
-              <li>Accountability</li>
-              <li>Problem Solving</li>
-            </ul>
+            <div class="skills">
+              <h3>Soft Skills</h3>
+              <ul>
+                <li>Empathy</li>
+                <li>Personability</li>
+                <li>Approachability</li>
+                <li>Communication</li>
+                <li>Adaptability</li>
+                <li>Positive Attitude</li>
+                <li>Teamwork</li>
+                <li>Time Management</li>
+                <li>Leadership</li>
+                <li>Accountability</li>
+                <li>Problem Solving</li>
+              </ul>
+            </div>
           </aside>
         </section>
 
