Further adjusted responsive media queries

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
           <div class="contact-item">
             <a class="contact-link" href="mailto:tyler@techturnip.us">
               <i class="fa fa-envelope fa-2x" aria-hidden="true"></i>
-              tyler@techturnip.us
+              <span>tyler@techturnip.us</span>
             </a>
           </div>
           <div class="contact-item">
             <a class="contact-link" href="tel:1-270-777-5591">
               <i class="fa fa-phone fa-2x" aria-hidden="true"></i>
-              270-777-5591
+              <span>270-777-5591</span>
             </a>
           </div>
         </section>
